--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
                 <textarea 
                     class="output_text" 
                     id="output_text"
+                    disabled
                     ></textarea>
             </div>
             <div class="output_buttons">
