[FEAT] Add encrypt and decrypt functions

--- a/index.html
+++ b/index.html
@@ -56,14 +56,14 @@
                 <textarea 
                     class="output_text" 
                     id="output_text"
-                    disabled
+                    readonly
                     ></textarea>
             </div>
             <div class="output_buttons">
                 <button 
                     class="button"
-                    id="bnt_copy"
-                    >COPIAR</button>
+                    id="btn_copy"
+                    >COPIAR</button>    
             </div>
         </section> 
     </main>
@@ -85,6 +85,6 @@
             </a>
         </div>            
     </footer>
-
+    <script src="./scripts/script.js"></script>
 </body>
 </html>
