[FEAT] Add img output, msn error, validaciones, btn copiar

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
     <main class="content">
         <section class="content_input">
-            <span class="input_rules">Solo letras minúsculas y sin acentos</span>
+            <span class="input_rules" id="input_rules">Solo letras minúsculas y sin acentos</span>
             <div class="input_frame">
                 <textarea 
                     class="input_text" 
@@ -51,7 +51,7 @@
         </section>
 
         <section class="content_output">
-            <span class="output_rules">_</span>
+            <span class="output_rules" id="output_rules">_</span>
             <div class="output_frame">
                 <textarea 
                     class="output_text" 
