[FIX] Modify the error message in input

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
     <main class="content">
         <section class="content_input">
-            <span class="input_rules" id="input_rules">Solo letras minúsculas y sin acentos</span>
+            <span class="input_rules" id="input_rules">Solo letras minúsculas. No acentos. No caracteres especiales</span>
             <div class="input_frame">
                 <textarea 
                     class="input_text" 
